--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>nl.markv.silk</groupId>
-    <artifactId>silk_sql</artifactId>
+    <artifactId>silk_sql_gen</artifactId>
 
     <packaging>jar</packaging>
     <version>0.3.0</version>
-    <name>silk</name>
+    <name>Silk: sql generator</name>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>nl.markv.silk</groupId>
             <artifactId>silk_parse</artifactId>
-            <version>${project.version}</version>
+            <version>0.3.0</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
